# CD-SemanticChunker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  guide.md
evaluation/: __init__.py  ragas_evaluator.py  test_cases.py
examples/: 01_basic_usage.ipynb  02_full_pipeline.ipynb  03_evaluation.ipynb  run_full_pipeline.py
examples/full_pipeline_db/dd893b53-621a-43c6-8234-104e85fa8489/: index_metadata.pickle
examples/full_pipeline_db/f0c1ee66-f22b-446f-bb4d-d5f87734bf83/: index_metadata.pickle
examples/full_pipeline_db/fc738ba2-f622-4911-95a3-6e0dd30d7049/: index_metadata.pickle
examples/sample_images/: ATTRIBUTION.md
examples/test_rag_db/: chroma.sqlite3
src/construction_rag/: __init__.py  chunker.py  evaluation.py  llm.py  models.py  pipeline.py  rag.py  utils.py  visualization.py
tests/: __init__.py  test_chunker.py  test_models.py  test_rag.py
