[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "construction-rag"
version = "0.1.0"
description = "Open-source library for transforming construction drawings into searchable chunks for RAG-based retrieval systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph Noel", email = "joseph.noel@rwth-aachen.de"}
]
keywords = [
    "RAG",
    "retrieval-augmented-generation",
    "construction",
    "AEC",
    "document-parsing",
    "docling",
    "vector-database",
    "semantic-search",
    "LLM"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "docling>=2.70.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
evaluation = [
    "ragas>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
]
all = [
    "construction-rag[evaluation,dev,notebooks]",
]

[project.urls]
Homepage = "https://github.com/jnoel/construction-rag"
Documentation = "https://github.com/jnoel/construction-rag#readme"
Repository = "https://github.com/jnoel/construction-rag.git"
Issues = "https://github.com/jnoel/construction-rag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/construction_rag"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/evaluation",
    "/examples",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
